# py-webapi

./: main.py  pyproject.toml
API/Post/: crud.py  schemas.py
API/User/: crud.py  schemas.py  view.py
alembic/: env.py
alembic/versions/: fa83d539dc3b_create_profile.py  fc71597efc39_create_tables.py
core/: config.py
core/models/: __init__.py  comments.py  post.py  user.py
